update messagess
:wq